tests/ui/cross/cross-fn-cache-hole.stderr
error[E0277]: the trait bound `i32: Bar<u32>` is not satisfied
  --> $DIR/cross-fn-cache-hole.rs:16:11
   |
LL |     where i32: Foo<u32, A>
   |           ^^^^^^^^^^^^^^^^ the trait `Bar<u32>` is not implemented for `i32`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/cross-fn-cache-hole.rs:11:1
   |
LL | trait Bar<X> { }
   | ^^^^^^^^^^^^
   = help: see issue #48214
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
LL + #![feature(trivial_bounds)]
   |

error[E0277]: the trait bound `i32: Bar<u32>` is not satisfied
  --> $DIR/cross-fn-cache-hole.rs:30:15
   |
LL |     require::<i32, u32>();
   |               ^^^ the trait `Bar<u32>` is not implemented for `i32`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/cross-fn-cache-hole.rs:11:1
   |
LL | trait Bar<X> { }
   | ^^^^^^^^^^^^
note: required by a bound in `require`
  --> $DIR/cross-fn-cache-hole.rs:25:14
   |
LL | fn require<A,B>()
   |    ------- required by a bound in this function
LL |     where A: Bar<B>
   |              ^^^^^^ required by this bound in `require`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
